--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,25 @@ body, body > * {
 input[type="button"],
 input[type="submit"],
 input[type="reset"] {
+    cursor: pointer;
     background-color: black;
     color:white;
     font-weight: 700;
     font-size: 20px;
     padding: 9px 25px;
     border: 3px solid rgb(0, 0, 0);
+    border-radius: 3px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.345);
     transform: translateY(0px) translateX(0px);
     transition: all 0.2s ease;
 }
+
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+    background-color: rgb(52, 52, 52);
+}
+
 
 input[type="button"]:active,
 input[type="submit"]:active,
